# aas-core3.0-cpp

./: CMakeLists.txt  aas_core3-config.cmake
include/aas_core/aas_3_0/: common.hpp  verification.hpp
src/: jsonization.cpp  stringification.cpp  verification.cpp  xmlization.cpp
